--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,16 @@
 # To install: pip install -r requirements.txt
 
 # Core Framework
-Django==5.2.4
+Django==5.2.5
 
 # Environment Configuration
 python-decouple==3.8
 
 # HTTP Requests (for API integrations)
 requests==2.32.4
+
+# Security: Ensure setuptools is up to date (addresses CVE vulnerabilities)
+setuptools>=70.0.0
 
 # Note: When adding new dependencies:
 # 1. Install the package: pip install package_name
