Add production security settings and DRF configuration
- Add security headers when DEBUG=false (HSTS, XSS protection, etc.)
- Configure Django REST Framework with authentication and pagination
- Update production example with Pesapal production settings
- Ready for production deployment with security best practices

--- a/.env.production.example
+++ b/.env.production.example
@@ -7,6 +7,12 @@ DEBUG=false
 SECRET_KEY={{GENERATE_A_STRONG_SECRET}}
 ALLOWED_HOSTS=your.domain.com
 
+# Production Security (optional - defaults to True when DEBUG=false)
+# SECURE_SSL_REDIRECT=true  # Set to false if not using HTTPS
+
+# External Services
+PESAPAL_SANDBOX=false  # Use production Pesapal
+
 # Database (Aiven Postgres)
 # Example DSN (replace placeholders with your real values)
 DATABASE_URL=postgres://{{DB_USER}}:{{DB_PASSWORD}}@{{DB_HOST}}:{{DB_PORT}}/{{DB_NAME}}?sslmode=require
